:recycle: Refactor : 토큰 발급 수정 (#40)